--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -41,8 +41,11 @@ pre,
 	// h1's can exist outside of `.mw-body-content` so some heading styles
 	// therefore need to be defined in `.mw-body` as well.
 	& h1,
+	& .mw-heading1,
 	&-content h1,
-	&-content h2 {
+	&-content .mw-heading1,
+	&-content h2,
+	&-content .mw-heading2 {
 		margin-bottom: 0.25em;
 		padding: 0;
 		font-family: @font-family-serif;
@@ -68,7 +71,9 @@ pre,
 	}
 
 	& h1,
-	&-content h1 {
+	& .mw-heading1,
+	&-content h1,
+	&-content .mw-heading1 {
 		font-size: @font-size-heading-1;
 	}
 }
@@ -88,18 +93,24 @@ pre,
 		font-size: unit( @font-size-small, rem ); // T311421
 	}
 
+	.mw-heading1,
 	h1 {
 		margin-top: 1em;
 	}
 
+	.mw-heading2,
 	h2 {
 		margin-top: 1em;
 		font-size: @font-size-heading-2;
 	}
 
+	.mw-heading3,
 	h3,
+	.mw-heading4,
 	h4,
+	.mw-heading5,
 	h5,
+	.mw-heading6,
 	h6 {
 		margin-top: 0.3em;
 		margin-bottom: 0;
@@ -107,17 +118,23 @@ pre,
 		line-height: @line-height-base;
 	}
 
+	.mw-heading3,
 	h3 {
 		font-size: @font-size-heading-3;
 	}
 
+	.mw-heading3,
 	h3,
+	.mw-heading4,
 	h4 {
 		font-weight: bold;
 	}
 
+	.mw-heading4,
 	h4,
+	.mw-heading5,
 	h5,
+	.mw-heading6,
 	h6 {
 		font-size: @font-size-reset; // Reset.
 	}
