Remove unnecessary imports in component stylesheets, make variable and mixin imports consistent
Bug: T345766
Change-Id: I2ae1d1668849a04520b73ac04fe16e1ff7f22fa6

--- a/resources/common/mixins.less
+++ b/resources/common/mixins.less
@@ -2,7 +2,7 @@
  * Less mixins shared between both legacy and Vector 2022.
  */
 
-@import '../common/variables.less';
+@import 'mediawiki.mixins.less';
 
 .mixin-vector-menu-heading() {
 	align-self: center;
