--- a/resources/skins.vector.styles.legacy/skin-legacy.less
+++ b/resources/skins.vector.styles.legacy/skin-legacy.less
@@ -2,6 +2,8 @@
  * Vector legacy stylesheets
  * See '../common/common.less' for common screen and print Vector stylesheets.
  */
+@import '../common/variables.less';
+@import '../common/mixins.less';
 
 @media screen {
 	// Layouts
