--- a/resources/skins.vector.zebra.styles/mixins.less
+++ b/resources/skins.vector.zebra.styles/mixins.less
@@ -1,6 +1,7 @@
 /**
  * Less mixins.
  */
+@import 'mediawiki.mixins.less';
 
 .mixin-vector-page-container-sizing() {
 	// Set a min-width to make explicit we do not support anything below this threshold.
