--- a/resources/common/common.less
+++ b/resources/common/common.less
@@ -4,7 +4,7 @@
  */
 
 @import './variables.less';
-@import 'mediawiki.mixins.less';
+@import './mixins.less';
 
 @media screen {
 	// Common styles
