Copy common styles into vector
Bug: T345766
Change-Id: Ib7a10d3351ad99c025237ab03ece84c1e2c1e257

--- a/resources/skins.vector.styles/components/LanguageDropdown.less
+++ b/resources/skins.vector.styles/components/LanguageDropdown.less
@@ -30,7 +30,7 @@
 			// !important needed to override Zebra Dropdown.less styles
 			// FIXME: Remove !important when Zebra is default
 			/* stylelint-disable-next-line declaration-no-important */
-			background-image: url( ../common/images/arrow-down-progressive.svg ) !important;
+			background-image: url( ./images/arrow-down-progressive.svg ) !important;
 			opacity: @opacity-base;
 		}
 	}
@@ -46,7 +46,7 @@
 				// !important needed to override Zebra Dropdown.less styles
 				// FIXME: Remove !important when Zebra is default
 				/* stylelint-disable-next-line declaration-no-important */
-				background-image: url( ../common/images/arrow-down-invert.svg ) !important;
+				background-image: url( ./images/arrow-down-invert.svg ) !important;
 			}
 		}
 	}
