--- a/resources/skins.vector.zebra.styles/mixins.less
+++ b/resources/skins.vector.zebra.styles/mixins.less
@@ -17,7 +17,7 @@
 // Defines the arrow beside dropdown headings.
 .mixin-vector-legacy-menu-heading-arrow {
 	content: '';
-	background: url( ../common/images/arrow-down.svg ) 100% 50% no-repeat;
+	background: url( ../skins.vector.styles/images/arrow-down.svg ) 100% 50% no-repeat;
 	width: unit( 16 / @font-size-tabs / @font-size-browser, em );
 	height: unit( 16 / @font-size-tabs / @font-size-browser, em );
 }
@@ -28,7 +28,7 @@
 
 	&::after {
 		content: '';
-		background: url( ../common/images/arrow-down.svg ) 100% 50% no-repeat;
+		background: url( ../skins.vector.styles/images/arrow-down.svg ) 100% 50% no-repeat;
 		width: unit( 16 / @font-size-tabs / @font-size-browser, em );
 		height: unit( 16 / @font-size-tabs / @font-size-browser, em );
 		// https://phabricator.wikimedia.org/T319070#8284272
