Copy common styles into legacy vector
Bug: T345766
Change-Id: I78fd91fa397a731d22aa6264f61f324f6fc22054

--- a/resources/skins.vector.styles.legacy/components/TabWatchstarLink.less
+++ b/resources/skins.vector.styles.legacy/components/TabWatchstarLink.less
@@ -31,30 +31,30 @@
 	}
 
 	#ca-unwatch.icon a::before {
-		background-image: url( ../common/images/unwatch-icon.svg );
+		background-image: url( ./images/unwatch-icon.svg );
 	}
 
 	#ca-unwatch.mw-watchlink-temp.icon a::before {
-		background-image: url( ../common/images/unwatch-temp-icon.svg );
+		background-image: url( ./images/unwatch-temp-icon.svg );
 	}
 
 	#ca-watch.icon a::before {
-		background-image: url( ../common/images/watch-icon.svg );
+		background-image: url( ./images/watch-icon.svg );
 	}
 
 	#ca-unwatch.icon a:hover::before,
 	#ca-unwatch.icon a:focus::before {
-		background-image: url( ../common/images/unwatch-icon-hl.svg );
+		background-image: url( ./images/unwatch-icon-hl.svg );
 	}
 
 	#ca-unwatch.mw-watchlink-temp.icon a:hover::before,
 	#ca-unwatch.mw-watchlink-temp.icon a:focus::before {
-		background-image: url( ../common/images/unwatch-temp-icon-hl.svg );
+		background-image: url( ./images/unwatch-temp-icon-hl.svg );
 	}
 
 	#ca-watch.icon a:hover::before,
 	#ca-watch.icon a:focus::before {
-		background-image: url( ../common/images/watch-icon-hl.svg );
+		background-image: url( ./images/watch-icon-hl.svg );
 	}
 
 	// Loading watchstar link class.
