--- a/resources/skins.vector.styles.legacy/layouts/screen.less
+++ b/resources/skins.vector.styles.legacy/layouts/screen.less
@@ -5,7 +5,7 @@
  */
 
 @import 'mediawiki.mixins.less';
-@import '../../common/variables.less';
+@import '../variables.less';
 
 body {
 	background-color: @background-color-secondary;
