Remove common CSS module
Bug: T345766
Change-Id: I57e388be4b620a437274524e20653ef9ba7289ed

--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -5,7 +5,7 @@
  * The rules here should only define the layout, not color or typography.
  */
 
-@import '../../common/variables.less';
+@import '../variables.less';
 @import 'mediawiki.mixins.less';
 
 // Content container
