--- a/resources/skins.vector.styles/layouts/toc/pinned.less
+++ b/resources/skins.vector.styles/layouts/toc/pinned.less
@@ -1,5 +1,5 @@
-@import '../../../common/variables.less';
-@import '../../../common/mixins.less';
+@import '../../variables.less';
+@import '../../mixins.less';
 
 .mw-table-of-contents-container {
 	// Needed for Grid-based layout
