--- a/resources/skins.vector.styles/layouts/toc/unpinned.less
+++ b/resources/skins.vector.styles/layouts/toc/unpinned.less
@@ -1,5 +1,5 @@
-@import '../../../common/variables.less';
-@import '../../../common/mixins.less';
+@import '../../variables.less';
+@import '../../mixins.less';
 
 @selector-nojs-collapsed-toc-open: ~'#vector-toc-collapsed-checkbox:checked';
 
