--- a/skinStyles/ext.echo.styles.alert.less
+++ b/skinStyles/ext.echo.styles.alert.less
@@ -1,4 +1,4 @@
-@import '../resources/common/variables.less';
+@import 'mediawiki.skin.variables.less';
 
 /** Mixin for collapsing the Echo new messages alert */
 .echo-alert-collapse() {
