--- a/skinStyles/mediawiki.action.edit.less
+++ b/skinStyles/mediawiki.action.edit.less
@@ -1,4 +1,4 @@
-@import '../resources/common/variables.less';
+@import '../resources/skins.vector.styles/variables.less';
 
 // FIXME: Remove -enabled when cache has cleared.
 .vector-feature-limited-width-clientpref-1 #wikiPreview,
