--- a/skinStyles/mediawiki.notification.less
+++ b/skinStyles/mediawiki.notification.less
@@ -1,4 +1,4 @@
-@import '../resources/common/variables.less';
+@import '../resources/skins.vector.styles/variables.less';
 
 /* mediawiki.notification */
 
