--- a/skinStyles/mediawiki.page.ready.less
+++ b/skinStyles/mediawiki.page.ready.less
@@ -1,4 +1,4 @@
-@import '../resources/common/variables.less';
+@import 'mediawiki.skin.variables.less';
 
 #mw-teleport-target {
 	font-size: @font-size-base;
