--- a/skinStyles/mediawiki.special.search.interwikiwidget.less
+++ b/skinStyles/mediawiki.special.search.interwikiwidget.less
@@ -1,7 +1,7 @@
 /**
  * Adjusts column ratio of the search page when sidebar is closed
  */
-@import '../resources/common/variables.less';
+@import 'mediawiki.skin.variables.less';
 
 .vector-feature-main-menu-pinned-disabled .mw-searchresults-has-iw {
 	@media only screen and ( min-width: @width-breakpoint-desktop ) {
