--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -87,8 +87,18 @@ pre,
 	font-size: @font-size-base--trident-hack;
 	line-height: @line-height-base;
 
-	.vector-feature-custom-font-size-clientpref-enabled & {
+	// FIXME: Migrate `enabled` to `1`.
+	.vector-feature-custom-font-size-clientpref-enabled,
+	.vector-feature-custom-font-size-clientpref-1 & {
 		font-size: 16px;
+	}
+
+	.vector-feature-custom-font-size-clientpref-2 & {
+		font-size: 24px;
+	}
+
+	.vector-feature-custom-font-size-clientpref-3 & {
+		font-size: 40px;
 	}
 
 	#siteSub {
