--- a/resources/skins.vector.styles/layouts/toc/unpinned.less
+++ b/resources/skins.vector.styles/layouts/toc/unpinned.less
@@ -1,10 +1,7 @@
 @import '../../variables.less';
 @import '../../mixins.less';
 
-@selector-nojs-collapsed-toc-open: ~'#vector-toc-collapsed-checkbox:checked';
-
 // TOC dropdown styles
-#vector-toc-collapsed-button,
 .vector-sticky-header-toc,
 .vector-page-titlebar-toc {
 	display: none;
@@ -107,44 +104,16 @@
 	}
 
 	//
-	// No-JS TOC in page titlebar on narrow screens for anon users
+	// Applies simplified TOC styles to No-JS pinned TOC on narrow viewports
 	//
 	@media ( max-width: @max-width-tablet ) {
-		// Make the TOC appear in the page titlebar on small viewports
-		// even when the TOC location in the DOM is actually in the sidebar
-		// This case only happens for no-js anon users.
 		&.vector-feature-toc-pinned-clientpref-1 {
-			#vector-toc-collapsed-button {
-				display: block;
-			}
-
-			#vector-toc-pinned-container {
-				// Override TOC container's sticky positioning
-				position: relative;
-				.mixin-toc-unpinned();
+			.vector-sticky-pinned-container {
+				position: static;
 			}
 
 			.vector-toc {
-				display: none;
-				position: absolute;
-				top: 36px; // TOC button height
-				// FIXME: Don't use a magic number. This used to be tied to the private variable in core
-				// @icon-padding-md so perhaps this needs to make use of the flush classes?
-				left: -12px;
-				margin-top: @padding-top-content; // Account for padding-top from .mw-body
-				// FIXME: Collapsed TOC styles are not consistent with other vector dropdowns
-				border: @border-width-base @border-style-base @border-color-base;
-				z-index: @z-index-dropdown;
-
-				.vector-pinnable-header,
-				.vector-toc-contents {
-					padding-left: @padding-horizontal-dropdown-menu-item;
-				}
-			}
-
-			@{selector-nojs-collapsed-toc-open} ~ .mw-table-of-contents-container .vector-toc {
-				// Hide the TOC when the button is not checked
-				display: block;
+				max-height: 200px;
 			}
 		}
 	}
