--- a/resources/skins.vector.styles/components/PinnableHeader.less
+++ b/resources/skins.vector.styles/components/PinnableHeader.less
@@ -30,6 +30,7 @@
 	color: @color-progressive;
 	cursor: pointer;
 	text-align: left;
+	font-size: unit( @font-size-small, rem );
 
 	&:hover {
 		color: @color-progressive--hover;
