--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -22,10 +22,10 @@
 	&::after {
 		content: '';
 		background: url( ./images/arrow-down.svg ) 100% 50% no-repeat;
-		width: unit( 16 / @font-size-tabs / @font-size-browser, em );
-		height: unit( 16 / @font-size-tabs / @font-size-browser, em );
+		width: unit( 12 / @font-size-browser, rem );
+		height: unit( 12 / @font-size-browser, rem );
 		// https://phabricator.wikimedia.org/T319070#8284272
-		margin-left: -1px;
+		margin-left: 7px;
 	}
 }
 
