--- a/resources/skins.vector.styles/typography.less
+++ b/resources/skins.vector.styles/typography.less
@@ -88,7 +88,7 @@ pre,
 	line-height: @line-height-base;
 
 	#siteSub {
-		font-size: 12.8px; // T311421
+		font-size: unit( @font-size-small, rem ); // T311421
 	}
 
 	h1 {
