--- a/resources/skins.vector.styles/layouts/screen.less
+++ b/resources/skins.vector.styles/layouts/screen.less
@@ -93,8 +93,7 @@ body {
 // are rendered.
 #contentSub:not( :empty ),
 #contentSub2 {
-	font-size: 84%;
-	line-height: 1.2em;
+	font-size: unit( @font-size-small, rem );
 	color: @color-subtle;
 	width: auto;
 	// Visually separate #contentSub and #contentSub2 (T315639)
