styles: Replace legacy Vector breakpoint tokens where applicable
Replacing the legacy Vector breakpoint tokens with the Codex
standard ones. All names have been unified, only some legacy values
remain for backwards compatibility.
Also
- replacing a wrongly applied min-width with the correct max-width
  token,
- replacing a width with an equal value min-width one and
- removing the now equal value mobile min-width one.

Note that we can't do some reference magic here alike
`@max-width-breakpoint-mobile: @min-width-breakpoint-tablet - 1px;` as
this would take the Codex value from skin variables and not the legacy
value.
Also note, that we could move all those Vector legacy definitions into
Vector's 'mediawiki.skin.variables.less' file(s), but that would mean
that extensions don't rely on the Codex default values, but on Vector's
and we want latter to move to the standard, also in foresight of
further standardization to build for all feature teams like a
shared Grid.

Bug: T331403
Change-Id: Ifb968b1977001edb1a79e20df387c61f27043542

--- a/resources/skins.vector.styles.legacy/variables.less
+++ b/resources/skins.vector.styles.legacy/variables.less
@@ -2,14 +2,14 @@
 
 //
 // == Media query breakpoints ==
+// See also https://doc.wikimedia.org/codex/latest/design-tokens/breakpoint.html
 //
-@min-width-mobile: @width-breakpoint-mobile; // Above 320px
-@max-width-mobile: @width-breakpoint-tablet - 1px; // Below 719px
-@min-width-tablet: @width-breakpoint-tablet; // Above 720px
-@max-width-tablet: @width-breakpoint-desktop - 1px; // Below 999px
-@min-width-desktop: @width-breakpoint-desktop; // Above 1000px
-@max-width-desktop: @width-breakpoint-desktop-wide - 1px; // Below 1199px
-@min-width-desktop-wide: @width-breakpoint-desktop-wide; // Above 1200px
+@max-width-breakpoint-mobile: 719px;
+@min-width-breakpoint-tablet: 720px; // In contrast to Codex `640px`.
+@max-width-breakpoint-tablet: 999px;
+@min-width-breakpoint-desktop: 1000px; // In contrast to Codex `1120px`.
+@max-width-breakpoint-desktop: 1199px;
+@min-width-breakpoint-desktop-wide: 1200px; // In contrast to Codex `1680px`.
 
 // Defines the minimum viewport width, at which point the layout will not get any
 // smaller and will start horizontal scrolling instead.
