--- a/resources/skins.vector.styles/components/PageToolbar.less
+++ b/resources/skins.vector.styles/components/PageToolbar.less
@@ -11,7 +11,7 @@
 	.mw-portlet-views {
 		display: none;
 
-		@media ( min-width: @min-width-tablet ) {
+		@media ( min-width: @min-width-breakpoint-tablet ) {
 			&:not( .emptyPortlet ) {
 				display: block;
 			}
