--- a/resources/skins.vector.styles/components/PinnableHeader.less
+++ b/resources/skins.vector.styles/components/PinnableHeader.less
@@ -48,7 +48,7 @@
 }
 
 // Pinnable behavior is only enabled when JS is enabled and on larger viewports
-@media ( min-width: @min-width-desktop ) {
+@media ( min-width: @min-width-breakpoint-desktop ) {
 	&.client-js {
 		.vector-pinnable-header-unpinned .vector-pinnable-header-pin-button,
 		.vector-pinnable-header-pinned .vector-pinnable-header-unpin-button {
