--- a/resources/skins.vector.styles/components/SearchBox.less
+++ b/resources/skins.vector.styles/components/SearchBox.less
@@ -15,7 +15,7 @@
 	}
 }
 
-@media ( min-width: @min-width-desktop-wide ) {
+@media ( min-width: @min-width-breakpoint-desktop-wide ) {
 	.client-js & .vector-search-box.vector-search-box-auto-expand-width {
 		// Ensure search box is aligned with content when it autoexpands (i.e. search thumbnails)
 		margin-left: -@size-search-expand;
