--- a/resources/skins.vector.styles/components/TableOfContents.less
+++ b/resources/skins.vector.styles/components/TableOfContents.less
@@ -141,7 +141,7 @@
 
 // On smaller viewports the TOC will always be moved to the page titlebar via JS
 // regardless of the TOC pinned classes
-@media ( max-width: @max-width-tablet ) {
+@media ( max-width: @max-width-breakpoint-tablet ) {
 	&.client-js .vector-page-titlebar .vector-toc-landmark {
 		display: block;
 	}
