--- a/resources/skins.vector.styles/layouts/toc/pinned.less
+++ b/resources/skins.vector.styles/layouts/toc/pinned.less
@@ -7,7 +7,7 @@
 	height: 100%;
 }
 
-@media ( min-width: @min-width-desktop ) {
+@media ( min-width: @min-width-breakpoint-desktop ) {
 	&.vector-feature-toc-pinned-clientpref-1 #mw-panel-toc {
 		// Support: Chrome
 		// Work around sticky-positioned layers disabling subpixel text rendering (T327460).
