--- a/resources/skins.vector.zebra.styles/components/PinnableElement.less
+++ b/resources/skins.vector.zebra.styles/components/PinnableElement.less
@@ -31,7 +31,7 @@
 	top: @grid-row-gap;
 }
 
-@media ( max-width: @max-width-tablet ) {
+@media ( max-width: @max-width-breakpoint-tablet ) {
 	/**
  	 * At lower resolutions, we want to hide the pinned containers when JS is enabled since these
  	 * elements collapse (become unpinned) at this resolution via PinnableElement.js.
