--- a/resources/skins.vector.zebra.styles/layouts/screen.less
+++ b/resources/skins.vector.zebra.styles/layouts/screen.less
@@ -19,7 +19,7 @@ html& {
 	--padding-horizontal-content: @padding-horizontal-content-box;
 }
 
-@media ( min-width: @min-width-desktop ) {
+@media ( min-width: @min-width-breakpoint-desktop ) {
 	html& {
 		--padding-horizontal-content: @padding-horizontal-content-box-wide;
 	}
