--- a/skinStyles/ext.echo.styles.alert.less
+++ b/skinStyles/ext.echo.styles.alert.less
@@ -20,7 +20,7 @@
 			text-overflow: ellipsis;
 		}
 
-		@media ( max-width: @min-width-desktop-wide ) {
+		@media ( max-width: @max-width-breakpoint-desktop ) {
 			.mw-echo-alert {
 				.echo-alert-collapse();
 			}
