--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -29,7 +29,7 @@
 	// as well as the dropdown menu itself when the menu is empty
 	&.user-links-collapsible-item,
 	.user-links-collapsible-item {
-		@media ( min-width: @min-width-tablet ) {
+		@media ( min-width: @min-width-breakpoint-tablet ) {
 			display: none;
 		}
 	}
@@ -46,7 +46,7 @@
 		align-items: center;
 	}
 
-	@media ( min-width: @min-width-desktop ) {
+	@media ( min-width: @min-width-breakpoint-desktop ) {
 		// Right margin to separate overflow menu from dropdown
 		margin-right: 8px;
 
@@ -56,7 +56,7 @@
 		}
 	}
 
-	@media ( max-width: @max-width-tablet ) {
+	@media ( max-width: @max-width-breakpoint-tablet ) {
 		// Only apply 8px spacing to normal links (i.e. Create account, User page)
 		// Links with button classes will have a larger touch area
 		// and therefore dont need additional spacing
@@ -66,7 +66,7 @@
 	}
 
 	.user-links-collapsible-item {
-		@media ( max-width: @max-width-mobile ) {
+		@media ( max-width: @max-width-breakpoint-mobile ) {
 			display: none;
 		}
 	}
@@ -109,7 +109,7 @@
 
 	// T287522#7295558: Increase the max-width of the username when viewport
 	// allows for it.
-	@media ( min-width: @min-width-desktop-wide ) {
+	@media ( min-width: @min-width-breakpoint-desktop-wide ) {
 		max-width: unit( 200 / @font-size-browser / @font-size-user-links, em );
 	}
 }
