--- a/resources/skins.vector.styles/mixins.less
+++ b/resources/skins.vector.styles/mixins.less
@@ -81,12 +81,12 @@
 	background-color: @background-color-page-container;
 	box-sizing: border-box;
 
-	@media ( min-width: @min-width-desktop ) {
+	@media ( min-width: @min-width-breakpoint-desktop ) {
 		padding-left: @padding-horizontal-page-container-desktop;
 		padding-right: @padding-horizontal-page-container-desktop;
 	}
 
-	@media ( min-width: @min-width-desktop-wide ) {
+	@media ( min-width: @min-width-breakpoint-desktop-wide ) {
 		padding-left: @padding-horizontal-page-container-desktop-wide;
 		padding-right: @padding-horizontal-page-container-desktop-wide;
 	}
