--- a/resources/skins.vector.zebra.styles/components/StickyHeader.less
+++ b/resources/skins.vector.zebra.styles/components/StickyHeader.less
@@ -116,7 +116,7 @@
 }
 
 // T298836 Sticky header is only shown at higher resolutions
-@media ( min-width: @min-width-desktop ) {
+@media ( min-width: @min-width-breakpoint-desktop ) {
 	&.client-js.vector-sticky-header-enabled {
 		// T290518: When the sticky header is enabled (feature flag is on, js is
 		// enabled, and viewport is at higher resolutions), add scroll padding to the
