Replace `border-color-portal-heading` with Codex `border-color-subtle`
Replacing Vector specific variable with standard token that is meant
for exactly the applied use cases.
Note, I've left `border-color-subtle-transparent` because of that
extra engineering leg. I assume it was meant for animating the property,
which is not there. It seems better to me to replace this variable too
with `border-color-transparent`.

Change-Id: If264e04e576f044b98ec0d61b085f65af0110b6d

--- a/resources/skins.vector.styles.legacy/variables.less
+++ b/resources/skins.vector.styles.legacy/variables.less
@@ -54,7 +54,7 @@
 @border-color-content: #a7d7f9;
 // Due to darker background gradient, border needs to be darkened for aligned visual perception.
 @border-color-content--tabs-inactive: darken( @border-color-content, 10% );
-@border-color-portal-heading: #c8ccd1;
+@border-color-subtle: #c8ccd1;
 // Use `rgba()` notation for better Safari support, see T254489.
 @border-start-blockquote: 4px @border-style-base #eaecf0;
 @padding-top-content: 0.5em;
