--- a/resources/skins.vector.styles/components/LanguageDropdown.less
+++ b/resources/skins.vector.styles/components/LanguageDropdown.less
@@ -70,7 +70,7 @@
 
 		.mw-portlet-empty-language-selector-body {
 			padding: 20px;
-			border-bottom: @border-style-base @border-width-base @border-color-portal-heading;
+			border-bottom: @border-style-base @border-width-base @border-color-subtle;
 			color: @color-subtle;
 		}
 	}
