--- a/resources/skins.vector.styles/components/PageToolbar.less
+++ b/resources/skins.vector.styles/components/PageToolbar.less
@@ -4,7 +4,7 @@
 	display: flex;
 	font-size: unit( @font-size-small, rem );
 	// Use box-shadow instead of border to allow border collapsing between titlebar and toolbar
-	box-shadow: 0 1px @border-color-portal-heading;
+	box-shadow: 0 1px @border-color-subtle;
 	// Add bottom margin to account for box-shadow
 	margin-bottom: 1px;
 
