--- a/resources/skins.vector.styles/components/SearchBox.less
+++ b/resources/skins.vector.styles/components/SearchBox.less
@@ -2,10 +2,7 @@
 // We have to put those styles outside `.skin-vector-search-vue`,
 // as we can't address no-JS modern and Vue enhanced otherwise.
 .vector-search-box {
-	// Use Vector's base font-size, as this is a component outside of `.vector-body`.
-	// Support IE 9-11, Trident cuts values 2 digits after decimal point.
-	// `calc` enables to set correct calculation in place again. See T102364.
-	font-size: @font-size-base--trident-hack;
+	font-size: @font-size-base;
 	// If this is a flex item, make sure it grows into available space.
 	flex-grow: 1;
 
