Change Zebra module to match current Vector styles
Changes the skins.vector.zebra.styles module to match
the current Vector 2022 styles.

**Visual changes**
(All pertaining to zebra.vector.zebra.styles)
- There are no grey backgrounds
- Context boxes with white backgrounds and drop-shadows
  are removed
- Page-tools sidebar width is the same as TOC sidebar width
- Content container is narrowed from 960px to 948px to prevent
  shifting content when pinning TOC or main menu.

Bug: T347638
Change-Id: If6e1ef21f076f6a9f0f8cafb2d745a7c13afb471

--- a/resources/skins.vector.zebra.styles/components/StickyHeader.less
+++ b/resources/skins.vector.zebra.styles/components/StickyHeader.less
@@ -18,6 +18,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	border-bottom: @border-width-base @border-style-base @border-color-content-box;
 
 	//
 	// Layout
@@ -146,7 +147,7 @@
 		}
 
 		.vector-sticky-pinned-container {
-			top: ~'calc( @{height-header} + @{grid-row-gap})';
+			top: @height-header;
 		}
 
 		// - T289817 `.mw-sticky-header-element` provides an API for template developers
