--- a/resources/skins.vector.zebra.styles/variables.less
+++ b/resources/skins.vector.zebra.styles/variables.less
@@ -152,8 +152,8 @@
 //
 // Layout
 //
-@max-width-page-container: unit( 1596px / @font-size-browser, em ); // T305069 - 99.75em @ 16
-@max-width-content-container: unit( 1040px / @font-size-browser, rem ); // T335155
+@max-width-page-container: unit( 1596px / @font-size-browser, rem ); // T305069 - 99.75rem @ 16
+@max-width-content-container: unit( 948px / @font-size-browser, rem ); // T335155
 @padding-horizontal-page-container: unit( 24px / @font-size-browser, rem );
 @padding-horizontal-page-container-desktop: unit( 44px / @font-size-browser, rem );
 @padding-horizontal-page-container-desktop-wide: unit( 52px / @font-size-browser, rem );
