--- a/resources/skins.vector.zebra.styles/layouts/screen.less
+++ b/resources/skins.vector.zebra.styles/layouts/screen.less
@@ -9,22 +9,6 @@
 // see T259331.
 @padding-content: @padding-top-content 0 1.5em;
 
-/**
- * Padding for the page content column gets smaller at narrow screen widths.
- * NOTE: This selector represents the HTML element because :root is unavailable due to how
- * the file is wrapped in an html selector in the skins.vector.zebra.styles/skin.less file.
- */
-html& {
-	--padding-vertical-content: @padding-vertical-content-box;
-	--padding-horizontal-content: @padding-horizontal-content-box;
-}
-
-@media ( min-width: @min-width-breakpoint-desktop ) {
-	html& {
-		--padding-horizontal-content: @padding-horizontal-content-box-wide;
-	}
-}
-
 &html {
 	scroll-padding-top: @scroll-padding-top;
 }
@@ -37,6 +21,11 @@ body {
 .mw-body,
 .parsoid-body {
 	direction: ltr;
+}
+
+.mw-body {
+	// T315261 Remove horizontal padding, rely on .mw-page-container padding instead
+	padding: @padding-content;
 }
 
 .mw-body .firstHeading {
@@ -69,8 +58,8 @@ body {
 		display: block;
 		position: absolute;
 		bottom: 0;
-		left: var( --padding-horizontal-content );
-		right: var( --padding-horizontal-content );
+		left: 0;
+		right: 0;
 		height: 1px;
 		background-color: @border-color-base;
 	}
@@ -93,44 +82,9 @@ body {
 	float: right;
 }
 
-/**
- * Style main content column to appear as a single box.
- * We cannot use a wrapper to create the border around these elements because
- * the Page Tools menu sits between the toolbar and content body and appears as a visually
- * distinct box when it's pinned (i.e. a wrapper element would wrap Page Tools as well).
- */
-.vector-page-titlebar,
-.vector-page-toolbar,
-.vector-body {
-	.mixin-vector-content-box();
-	padding-left: var( --padding-horizontal-content );
-	padding-right: var( --padding-horizontal-content );
-}
-
-.vector-page-titlebar {
-	padding-top: var( --padding-vertical-content );
-	/* stylelint-disable-next-line declaration-property-value-disallowed-list */
-	border-bottom-style: none;
-	border-bottom-right-radius: 0;
-	border-bottom-left-radius: 0;
-}
-
-.vector-page-toolbar {
-	/* stylelint-disable-next-line declaration-property-value-disallowed-list */
-	border-top-style: none;
-	/* stylelint-disable-next-line declaration-property-value-disallowed-list */
-	border-bottom-style: none;
-	border-radius: 0;
-}
-
 .vector-body {
 	position: relative;
 	z-index: @z-index-base;
-	padding-bottom: var( --padding-vertical-content );
-	border-top-right-radius: 0;
-	border-top-left-radius: 0;
-	/* stylelint-disable-next-line declaration-property-value-disallowed-list */
-	border-top-style: none;
 }
 
 #siteSub {
@@ -141,8 +95,7 @@ body {
 // are rendered.
 #contentSub:not( :empty ),
 #contentSub2 {
-	font-size: 84%;
-	line-height: 1.2em;
+	font-size: unit( @font-size-small, rem );
 	color: @color-subtle;
 	width: auto;
 	// Visually separate #contentSub and #contentSub2 (T315639)
@@ -165,14 +118,33 @@ body {
 	// Use non-zero padding to disable margin collapse.
 	// Be careful not to use overflow-y: scroll here (see T270146 and T271868)
 	padding-top: 0.05px;
+	padding-left: @padding-horizontal-page-container;
+	padding-right: @padding-horizontal-page-container;
+	background-color: @background-color-page-container;
+}
+
+@media ( min-width: @min-width-breakpoint-desktop ) {
+	.mw-page-container,
+	.vector-header-container .mw-header,
+	.vector-header-container .vector-sticky-header {
+		padding-left: @padding-horizontal-page-container-desktop;
+		padding-right: @padding-horizontal-page-container-desktop;
+	}
+}
+
+@media ( min-width: @min-width-breakpoint-desktop-wide ) {
+	.mw-page-container,
+	.vector-header-container .mw-header,
+	.vector-header-container .vector-sticky-header {
+		padding-left: @padding-horizontal-page-container-desktop-wide;
+		padding-right: @padding-horizontal-page-container-desktop-wide;
+	}
 }
 
 .vector-header-container {
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	background-color: @background-color-page-container;
-	border-bottom: @border-width-base @border-style-base @border-color-content-box;
 }
 
 .vector-header-container .mw-header,
@@ -180,6 +152,7 @@ body {
 	width: 100%;
 	// A min-height is set to account for projects where no icon is set.
 	min-height: @height-header;
+	background-color: @background-color-page-container;
 	.mixin-vector-page-container-sizing();
 }
 
