Refactor VectorComponentUserLinks to not use hooks
Bug: T350195
Change-Id: I6cbf45587475f0477657a7ce9309b2cd42da33c1

--- a/includes/templates/UserLinks.mustache
+++ b/includes/templates/UserLinks.mustache
@@ -1,4 +1,9 @@
 <nav class="vector-user-links{{#is-wide}} vector-user-links-wide{{/is-wide}}" aria-label="{{msg-personaltools}}" role="navigation" >
-	{{#data-user-links-overflow-menu}}{{>Menu}}{{/data-user-links-overflow-menu}}
+	<div class="vector-user-links-main">
+	{{#data-user-links-preferences}}{{>Menu}}{{/data-user-links-preferences}}
+	{{#data-user-links-user-page}}{{>Menu}}{{/data-user-links-user-page}}
+	{{#data-user-links-notifications}}{{>Menu}}{{/data-user-links-notifications}}
+	{{#data-user-links-overflow}}{{>Menu}}{{/data-user-links-overflow}}
+	</div>
 	{{>UserLinksDropdown}}
 </nav>
