--- a/resources/skins.vector.styles/components/UserLinks.less
+++ b/resources/skins.vector.styles/components/UserLinks.less
@@ -35,8 +35,50 @@
 	}
 }
 
+.vector-user-links-main {
+	display: flex;
+	align-items: center;
+
+	.vector-menu-content-list {
+		display: flex;
+		align-items: center;
+		font-size: @font-size-user-links;
+	}
+
+	@media ( min-width: @min-width-breakpoint-desktop ) {
+		// Right margin to separate overflow menu from dropdown
+		margin-right: 8px;
+
+		#p-vector-user-menu-notifications,
+		#p-vector-user-menu-userpage,
+		#p-vector-user-menu-preferences {
+			margin-right: 8px;
+		}
+
+		.vector-menu-content-list {
+			column-gap: 8px;
+		}
+	}
+
+	@media ( max-width: @max-width-breakpoint-tablet ) {
+		// Only apply 8px spacing to normal links (i.e. Create account, User page)
+		// Links with button classes will have a larger touch area
+		// and therefore dont need additional spacing
+		a:not( .mw-echo-notifications-badge  ):not( .cdx-button ) {
+			margin: 0 8px;
+		}
+	}
+
+	.user-links-collapsible-item {
+		@media ( max-width: @max-width-breakpoint-mobile ) {
+			display: none;
+		}
+	}
+}
+
 /**
  * Horizontal links menu - logged in and logged out.
+ * FIXME: for cached HTML.
  */
 .vector-user-links .mw-portlet-vector-user-menu-overflow {
 	font-size: @font-size-user-links;
