--- a/resources/skins.vector.zebra.styles/layouts/screen.less
+++ b/resources/skins.vector.zebra.styles/layouts/screen.less
@@ -63,6 +63,10 @@ body {
 		height: 1px;
 		background-color: @border-color-base;
 	}
+
+	&-blank::after {
+		content: none;
+	}
 }
 
 .vector-body-before-content {
