Allow client side preferences to render in a dropdown
Known problems:

- For now, this can only be rendered by manually updating
the isClientPreferencesPinned local variable in SkinVector22
This will be addressed in T351141
- The icon is not correct. This will be addressed in
https://phabricator.wikimedia.org/T351142

Bug: T350195
Change-Id: I0b1ec445c4d292bbf417a39dbc5d2032b563f525

--- a/includes/templates/ClientPreferencesContainer.mustache
+++ b/includes/templates/ClientPreferencesContainer.mustache
@@ -1,3 +1,3 @@
 <div id="vector-client-prefs-sidebar-container">
-	{{>ClientPreferences}}
+	{{#is-pinned}}{{>ClientPreferences}}{{/is-pinned}}
 </div>
