--- a/includes/templates/UserLinks.mustache
+++ b/includes/templates/UserLinks.mustache
@@ -2,6 +2,7 @@
 	<div class="vector-user-links-main">
 	{{#data-user-links-preferences}}{{>Menu}}{{/data-user-links-preferences}}
 	{{#data-user-links-user-page}}{{>Menu}}{{/data-user-links-user-page}}
+	{{#data-user-links-client-prefs}}{{>ClientPreferencesDropdown}}{{/data-user-links-client-prefs}}
 	{{#data-user-links-notifications}}{{>Menu}}{{/data-user-links-notifications}}
 	{{#data-user-links-overflow}}{{>Menu}}{{/data-user-links-overflow}}
 	</div>
