--- a/includes/templates/ClientPreferences.mustache
+++ b/includes/templates/ClientPreferences.mustache
@@ -1,4 +1,4 @@
 <div class="vector-client-preferences vector-pinnable-element">
-    <div class="vector-pinnable-header">{{msg-vector-client-preferences}}</div>
+    <div class="vector-pinnable-header"><span class="vector-pinnable-header-label">{{msg-vector-client-preferences}}</span></div>
     <div id="vector-client-prefs" class="vector-pinnable-element"></div>
 </div>
