Create a sidebar for user preferences
* Adds mustache for sidebar
* Adds file to render sidebar

Bug: T350417
Change-Id: I691c8a0487e158e96027109c223569224f03a102

--- a/includes/templates/ClientPreferences.mustache
+++ b/includes/templates/ClientPreferences.mustache
@@ -1,3 +1,4 @@
-{{>Dropdown/Open}}
-    <h2>{{msg-vector-client-preferences}}</h2>
-{{>Dropdown/Close}}
+<div class="vector-client-preferences vector-pinnable-element">
+    <div class="vector-pinnable-header">{{msg-vector-client-preferences}}</div>
+    <div id="vector-client-prefs" class="vector-pinnable-element"></div>
+</div>
