--- a/resources/skins.vector.styles/layouts/grid.less
+++ b/resources/skins.vector.styles/layouts/grid.less
@@ -115,10 +115,15 @@
 		.vector-column-end {
 			grid-area: columnEnd;
 			overflow-anchor: none;
+
+			#vector-client-prefs {
+				width: 160px;
+			}
 		}
 	}
 
-	&.vector-feature-page-tools-pinned-enabled .mw-body {
+	&.vector-feature-page-tools-pinned-enabled .mw-body,
+	&.vector-feature-client-preferences-enabled .mw-body {
 		column-gap: @grid-column-gap;
 	}
 
