Fix sidebar component order
* This moves down the client pref menu
* For now when page tools is collapsed the client preference menu
is hidden. This will be revisited when we implement pinning
in the next sprint.

Bug: T350417
Change-Id: Ic94d6fd2c4ccb667b0ae602d03c564f88a14b8ec

--- a/resources/skins.vector.styles/components/PinnableHeader.less
+++ b/resources/skins.vector.styles/components/PinnableHeader.less
@@ -12,6 +12,10 @@
 	margin-bottom: -1px;
 }
 
+#vector-client-prefs-sidebar-container .vector-client-preferences .vector-pinnable-header {
+	padding-left: 0;
+}
+
 .vector-pinnable-header-label {
 	display: inline-block;
 	color: @color-subtle;
