--- a/includes/templates/ColumnEnd.mustache
+++ b/includes/templates/ColumnEnd.mustache
@@ -1,13 +1,15 @@
 <div class="vector-column-end">
-	{{#data-client-prefs}}
-		{{>ClientPreferencesContainer}}
-	{{/data-client-prefs}}
 	<nav class="vector-page-tools-landmark vector-sticky-pinned-container" aria-label="{{msg-vector-page-tools-nav-label}}">
-		{{#data-page-tools}}
-		{{>PinnableContainer/Pinned/Open}}
-			{{! Use `#vector-page-tools-pinned-container .vector-page-tools` to target styles at this element}}
-			{{#is-pinned}}{{>PageTools}}{{/is-pinned}}
-		{{>PinnableContainer/Close}}
-		{{/data-page-tools}}
+		<div class="vector-page-tools-landmark-container">
+			{{#data-page-tools}}
+			{{>PinnableContainer/Pinned/Open}}
+				{{! Use `#vector-page-tools-pinned-container .vector-page-tools` to target styles at this element}}
+				{{#is-pinned}}{{>PageTools}}{{/is-pinned}}
+			{{>PinnableContainer/Close}}
+			{{/data-page-tools}}
+			{{#data-client-prefs}}
+				{{>ClientPreferencesContainer}}
+			{{/data-client-prefs}}
+		</div>
 	</nav>
 </div>
