--- a/resources/skins.vector.styles/components/PageTools.less
+++ b/resources/skins.vector.styles/components/PageTools.less
@@ -4,6 +4,11 @@
 	display: none;
 }
 
+// Make an exception to above rule for client preferences.
+&.vector-feature-page-tools-pinned-disabled.vector-feature-client-preferences-enabled .vector-column-end .vector-page-tools-landmark {
+	display: block;
+}
+
 .vector-column-end {
 	// T327460: Prevent subpixel rendering issues associated with the text and Chrome.
 	contain: paint;
@@ -12,10 +17,24 @@
 		position: sticky;
 		top: 0;
 		margin-top: @margin-top-pinned-page-tools;
+
+		&-container {
+			max-height: calc( 100vh - 3.125rem - (24px * 2) );
+			overflow-y: auto;
+		}
+	}
+
+	#vector-client-prefs form {
+		padding: 6px 14px 6px 0;
+	}
+
+	#vector-client-prefs .vector-menu-heading {
+		padding-left: 0;
 	}
 }
 
-#vector-page-tools-pinned-container .vector-page-tools {
+#vector-page-tools-pinned-container .vector-page-tools,
+#vector-client-prefs-sidebar-container .vector-client-preferences {
 	width: 140px;
 	// Match spacing of TOC and main menu
 	margin-left: @padding-horizontal-dropdown-menu-item;
