Fix alignment issue in Zebra
Addresses misalignment of client pref in zebra

Bug: T350417
Change-Id: Ib4b80b13dc67d00362abf168853c3ae58ae808b3

--- a/includes/templates/ClientPreferencesContainer.mustache
+++ b/includes/templates/ClientPreferencesContainer.mustache
@@ -1,3 +1,3 @@
-<div id="vector-client-prefs-sidebar-container">
+<div id="vector-client-prefs-sidebar-container" class="vector-pinned-container">
 	{{#is-pinned}}{{>ClientPreferences}}{{/is-pinned}}
 </div>
