--- a/skinStyles/mediawiki.notification.less
+++ b/skinStyles/mediawiki.notification.less
@@ -4,13 +4,6 @@
 
 .mw-notification-area {
 	font-size: @font-size-notification;
-	// Center the notification area with a maximum width.
-	// We can't center .mw-notification-area-overlay as that would break position:fixed.
-	width: 100%;
-	box-sizing: border-box;
-	max-width: @max-width-page-container / @font-size-notification;
-	left: 50%;
-	transform: translateX( -50% );
 }
 
 .mw-notification-area-layout {
@@ -21,12 +14,6 @@
 	border: @border-base;
 	border-radius: @border-radius-base;
 	box-shadow: 0 2px 2px 0 rgba( 0, 0, 0, 0.25 );
-	// As the notification area was centered and given variable width, restore
-	// the fixed width of notifications here. Matches .mw-notification-area
-	// rule in core.
-	width: 20em;
-	box-sizing: border-box;
-	margin-left: auto;
 }
 
 .vector-sticky-header-enabled .mw-notification-area {
@@ -39,5 +26,5 @@
  * should be moved so that it doesn't obstruct the sticky header
  */
 .vector-sticky-header-visible .mw-notification-area-overlay > .mw-notification-area-floating {
-	transform: translate( -50%, @height-header );
+	transform: translateY( @height-header );
 }
