--- a/skinStyles/ooui.less
+++ b/skinStyles/ooui.less
@@ -2,6 +2,9 @@
 
 // For compatibility with code older than #mw-teleport-target (T350544)
 body > .oo-ui-windowManager {
-	z-index: @z-index-overlay;
 	font-size: @font-size-base;
+
+	> .oo-ui-dialog {
+		z-index: @z-index-overlay;
+	}
 }
